# smolfib

./: CMakeLists.txt  README.md  tools_dump_big.cpp
include/: fib.h
src/: fib_big.cpp  main.cpp
tests/: fib_tests.cpp
